# IntrospectionOnFlatBuffers

./: .gitignore  CMakeLists.txt  README.md
schema/: device.fbs  devices.fbs  people.fbs  person.fbs  select_result.fbs  shapeholders.fbs  telemetry.fbs  union_enum.fbs
src/consumers/: decode_reflection.cpp  select_example.cpp
src/producers/: create_device.cpp  create_person.cpp  create_sample.cpp  create_union_enum.cpp
src/reflection/: reflection_printer.cpp  reflection_printer.h
src/tests/: test_reflection.cpp
